--- a/DataStruct/CMakeLists.txt
+++ b/DataStruct/CMakeLists.txt
@@ -11,6 +11,7 @@ project(DataStructProject  C)
 #设置C标准
 set(CMAKE_C_STANDARD 11)
 add_compile_options(-Wall -Wextra -Werror)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O0")  # 禁用优化以获取更准确的性能数据
 
 #添加头文件搜索路径
 #include_directories(${PROJECT_SOURCE_DIR}/include)
@@ -26,6 +27,8 @@ set(SRC_FILES
     src/HashMap.c
     src/StringAlgorithm.c
     src/BinaryTree.c
+    src/Stack.c
+    src/Queue.c
     
 )
 
